# project_template

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/sample/: main.cpp
includes/: my_lib.h
scripts/cmake/: CompilerWarnings.cmake  DoxygenSupport.cmake  Targets.cmake  UnitTests.cmake  VCPKGSupport.cmake
sources/: CMakeLists.txt  common_types.h  sample_reader.cpp  sample_reader.h  sample_writer.cpp  sample_writer.h  sqlite3_wrapper.cpp  sqlite3_wrapper.h
tests/unit/: entry_point.cpp  rw_test.cpp  wrapper_test.cpp
